--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         href="css/jquery-ui.css" />
   <link rel="stylesheet" type="text/css" media="all"
         href="css/main.css" />
-  <title>Bugzilla Dashboard</title>
+  <title>Release Engineering Bugzilla Dashboard</title>
 </head>
 <body>
 <div id="header">
